--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "leaflet": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-geocode": "^0.1.2",
     "react-leaflet": "^2.2.1",
     "react-scripts": "2.1.8"
   },
