Now getting ebt resources payload based on target address

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# Set your google maps api key here (If you don't have one, get one at https://console.cloud.google.com/google/maps-apis)
-REACT_APP_GOOGLE_MAPS_API_KEY = ABCDFG
+# Replace "ABCDEFG" with your own API key. (If you don't have one, get one at https://console.cloud.google.com/google/maps-apis)
+REACT_APP_GOOGLE_MAPS_API_KEY = ABCDEFG
